<resources>
    <string name="app_name">SubJoin</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="email">Email...</string>
    <string name="password">Password...</string>
    <string name="todo">TODO</string>
    <string name="login">Login</string>
    <string name="or_login_with">Or Login With</string>
    <string name="don_t_have_an_account_need_new_account">Don\'t Have An Account, Need New Account?</string>

    <string name="create_account">Create Account</string>
    <string name="confirm_password">Confirm Password...</string>


</resources>
