<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/register_icon"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="120dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="120dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@mipmap/logo" />

    <EditText
        android:id="@+id/register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_icon"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="100dp"
        android:autofillHints=""
        android:background="@drawable/inputs"
        android:drawableStart="@drawable/email"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_email"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="1dp"
        android:autofillHints=""
        android:background="@drawable/inputs"
        android:drawableStart="@drawable/password"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/register_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_password"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="15dp"
        android:autofillHints=""
        android:background="@drawable/inputs"
        android:drawableStart="@drawable/password"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="10dp"
        tools:targetApi="o" />

    <Button
        android:id="@+id/register_create_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_confirm_password"
        android:layout_alignParentStart="true"
        android:layout_marginStart="3dp"
        android:layout_marginTop="43dp"
        android:background="@drawable/button"
        android:padding="15dp"
        android:text="@string/create_account"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textStyle="bold" />
</RelativeLayout>