<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/wall"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/login_icon"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="124dp"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/todo"
        android:padding="-50dp"
        android:scaleType="centerInside"
        app:srcCompat="@mipmap/logo" />

    <EditText
        android:id="@+id/login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_icon"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="22dp"
        android:autofillHints=""
        android:background="@drawable/inputs"
        android:drawableStart="@drawable/email"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="8dp"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_email"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="0dp"
        android:autofillHints=""
        android:background="@drawable/inputs"
        android:drawableStart="@drawable/password"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="8dp"
        tools:targetApi="o" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_password"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="0dp"
        android:background="@drawable/button"
        android:padding="15dp"
        android:text="@string/login"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/register_account_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_button"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="19dp"
        android:text="@string/don_t_have_an_account_need_new_account"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@android:color/holo_red_light"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_account_link"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="155dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="147dp"
        android:text="@string/or_login_with"
        android:textAlignment="viewStart"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="-13dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/facebook_signin_button"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/todo"
            android:src="@mipmap/facebook" />

        <ImageView
            android:id="@+id/twitter_signin_button"
            android:layout_width="125dp"
            android:layout_height="105dp"
            android:layout_marginStart="5dp"
            android:contentDescription="@string/todo"
            android:src="@mipmap/twitter" />

        <ImageView
            android:id="@+id/google_signin_button"
            android:layout_width="90dp"
            android:layout_height="75dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/todo"
            android:src="@mipmap/google" />

    </LinearLayout>

    <TextView
        android:id="@+id/forget_password_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="42dp"
        android:text="Forget Password, Click Here"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textStyle="bold" />


</RelativeLayout>